# relishplus

./: .env.example  .gitignore  README.md  config.json.example  pyproject.toml
documentation/: database.md
relishplus/: __init__.py  __main__.py  automation.py  config.py
